:fix: change position PlayVideoButton only when control panel visible

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1006,7 +1006,6 @@ a,
   }
 
   .video-play-button {
-    top: calc(50% - 87px);
     width: 75px;
     height: 75px;
   }
